# libbde

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.macosx  README.mingw  README.static  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libbde-wiki.ini  libbde.ini  libbde.nuspec  libbde.pc.in  libbde.spec.in  pyproject.toml.in  setup.cfg.in  setup.py  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  synctestdata.ps1  synctestdata.sh  tox.ini
bdetools/: Makefile.am  bdeinfo.c  bdemount  bdemount.c  bdeoutput.c  bdeoutput.h  bdetools_fuse.h  bdetools_getopt.c  bdetools_getopt.h  bdetools_i18n.h  bdetools_input.c  bdetools_input.h  bdetools_libbde.h  bdetools_libbfio.h  bdetools_libcdata.h  bdetools_libcerror.h  bdetools_libclocale.h  bdetools_libcnotify.h  bdetools_libcpath.h  bdetools_libcsplit.h  bdetools_libcstring.h  bdetools_libcsystem.h  bdetools_libfdatetime.h  bdetools_libfguid.h  bdetools_libuna.h  bdetools_output.c  bdetools_output.h  bdetools_signal.c  bdetools_signal.h  bdetools_unused.h  byte_size_string.c  byte_size_string.h  info_handle.c  info_handle.h  mount_dokan.c  mount_dokan.h  mount_file_entry.c  mount_file_entry.h  mount_file_system.c  mount_file_system.h  (+4 more)
dpkg/: rules  (+6 more)
include/: Makefile.am  libbde.h.in
include/libbde/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libbde/: Makefile.am  bde_metadata.h  bde_volume.h  libbde.c  libbde.rc.in  libbde_aes.c  libbde_aes.h  libbde_aes_ccm_encrypted_key.c  libbde_aes_ccm_encrypted_key.h  libbde_aes_cmm_encrypted_key.c  libbde_array_type.c  libbde_array_type.h  libbde_codepage.h  libbde_debug.c  libbde_debug.h  libbde_definitions.h  libbde_definitions.h.in  libbde_diffuser.c  libbde_diffuser.h  libbde_empty_block.c  libbde_empty_block.h  libbde_encryption.c  libbde_encryption.h  libbde_encryption_context.c  libbde_encryption_context.h  libbde_error.c  libbde_error.h  libbde_error_string.c  libbde_error_string.h  libbde_extern.h  libbde_external_key.c  libbde_external_key.h  libbde_fve_auto_unlock.c  libbde_fve_auto_unlock.h  libbde_io_handle.c  libbde_io_handle.h  libbde_key.c  libbde_key.h  libbde_key_protector.c  libbde_key_protector.h  (+53 more)
libbde/old/: libbde_aes.bck.c  libbde_aes.c  libbde_aes.h  libbde_diffuser.c  libbde_error_string.c
libcthreads/: Makefile.am  libcthreads_condition.c  libcthreads_condition.h  libcthreads_definitions.h  libcthreads_error.c  libcthreads_error.h  libcthreads_extern.h  libcthreads_libcerror.h  libcthreads_libcstring.h  libcthreads_lock.c  libcthreads_lock.h  libcthreads_mutex.c  libcthreads_mutex.h  libcthreads_queue.c  libcthreads_queue.h  libcthreads_read_write_lock.c  libcthreads_read_write_lock.h  libcthreads_repeating_thread.c  libcthreads_repeating_thread.h  libcthreads_support.c  libcthreads_support.h  libcthreads_thread.c  libcthreads_thread.h  libcthreads_thread_attributes.c  libcthreads_thread_attributes.h  libcthreads_thread_pool.c  libcthreads_thread_pool.h  libcthreads_types.h  libcthreads_unused.h
macosx/: Introduction.rtf.in  License.rtf  Makefile.am  Readme.rtf
macosx/libbde.pmdoc/: 01bin.xml  01bin.xml.in  02include.xml  02include.xml.in  03lib.xml  03lib.xml.in  04share.xml  04share.xml.in  05python.xml  05python.xml.in  index.xml  index.xml.in
msvscpp/: Makefile.am  libbde.sln
msvscpp/bde_test_aes_ccm_encrypted_key/: bde_test_aes_ccm_encrypted_key.vcproj  bde_test_aes_ccm_encrypted_key.vcxproj  bde_test_aes_ccm_encrypted_key.vcxproj.filters
msvscpp/bde_test_encryption_context/: bde_test_encryption_context.vcproj  bde_test_encryption_context.vcxproj  bde_test_encryption_context.vcxproj.filters
msvscpp/bde_test_error/: bde_test_error.vcproj  bde_test_error.vcxproj  bde_test_error.vcxproj.filters
msvscpp/bde_test_external_key/: bde_test_external_key.vcproj  bde_test_external_key.vcxproj  bde_test_external_key.vcxproj.filters
msvscpp/bde_test_get_version/: bde_test_get_version.vcproj
msvscpp/bde_test_io_handle/: bde_test_io_handle.vcproj  bde_test_io_handle.vcxproj  bde_test_io_handle.vcxproj.filters
msvscpp/bde_test_key/: bde_test_key.vcproj  bde_test_key.vcxproj  bde_test_key.vcxproj.filters
msvscpp/bde_test_key_protector/: bde_test_key_protector.vcproj  bde_test_key_protector.vcxproj  bde_test_key_protector.vcxproj.filters
msvscpp/bde_test_metadata/: bde_test_metadata.vcproj  bde_test_metadata.vcxproj  bde_test_metadata.vcxproj.filters
msvscpp/bde_test_metadata_block_header/: bde_test_metadata_block_header.vcproj  bde_test_metadata_block_header.vcxproj  (+1 more)
pybde/: Makefile.am  pybde.c  pybde.h  pybde_datetime.c  pybde_datetime.h  pybde_encryption_methods.c  pybde_encryption_methods.h  pybde_error.c  pybde_error.h  pybde_file_object_io_handle.c  pybde_file_object_io_handle.h  pybde_guid.c  pybde_guid.h  pybde_integer.c  pybde_integer.h  pybde_key_protection_types.c  pybde_key_protection_types.h  pybde_key_protector.c  pybde_key_protector.h  pybde_key_protectors.c  pybde_key_protectors.h  pybde_libbde.h  pybde_libbfio.h  pybde_libcerror.h  pybde_libclocale.h  pybde_libcstring.h  pybde_libfguid.h  pybde_python.h  pybde_unused.h  pybde_volume.c  pybde_volume.h  setup.py.in
pybde-python2/: Makefile.am
tests/: Makefile.am  atlocal.in  bde_test_aes_ccm_encrypted_key.c  bde_test_encryption_context.c  bde_test_error.c  bde_test_external_key.c  bde_test_functions.c  bde_test_functions.h  bde_test_get_version.c  bde_test_getopt.c  bde_test_getopt.h  bde_test_io_handle.c  bde_test_key.c  bde_test_key_protector.c  bde_test_libbde.h  bde_test_libbfio.h  bde_test_libcerror.h  bde_test_libclocale.h  bde_test_libcnotify.h  bde_test_libcstring.h  bde_test_libcsystem.h  bde_test_libcthreads.h  bde_test_libuna.h  bde_test_macros.h  bde_test_memory.c  bde_test_memory.h  bde_test_metadata.c  bde_test_metadata_block_header.c  bde_test_metadata_entry.c  bde_test_metadata_header.c  bde_test_notify.c  bde_test_open_close.c  bde_test_password.c  bde_test_password_keep.c  bde_test_read  bde_test_read.c  bde_test_recovery.c  bde_test_sector_data.c  bde_test_sector_data_vector.c  bde_test_seek  (+41 more)
(+202 files in other folders)
